--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,9 @@ layout: table_wrappers
       <a href="#" id="menu-button" class="site-button">
         <svg viewBox="0 0 24 24" class="icon"><use xlink:href="#svg-menu"></use></svg>
       </a>
-      <padding-top> 50px;</padding-top>
+      .site-title {
+                   padding-top: 50px;
+      }
     </div>
     <nav role="navigation" aria-label="Main" id="site-nav" class="site-nav">
       {% if site.just_the_docs.collections %}
