--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,11 @@ layout: table_wrappers
 
   <div class="side-bar">
     <div class="site-header">
+      @media (min-width: 50rem)
+      .site-title {
+                   padding-top: 4.5rem;
+                   padding-bottom: .5rem;
+                  }
       <a href="{{ '/' | absolute_url }}" class="site-title lh-tight">{% include title.html %}</a>
       <a href="#" id="menu-button" class="site-button">
         <svg viewBox="0 0 24 24" class="icon"><use xlink:href="#svg-menu"></use></svg>
