--- a/_sass/color_schemes/RAFBER.scss
+++ b/_sass/color_schemes/RAFBER.scss
@@ -78,7 +78,7 @@ $code-background-color: $grey-lt-000 !default;
 $feedback-color: darken($sidebar-color, 3%) !default;
 
 $body-text-color: $grey-dk-100 !default;
-$body-heading-color: $grey-dk-300 !default;
+$body-heading-color: $blue-300 !default;
 $search-result-preview-color: $grey-dk-000 !default;
 $nav-child-link-color: $grey-dk-100 !default;
 $link-color: $blue-300;
