--- a/_sass/color_schemes/RAFBER.scss
+++ b/_sass/color_schemes/RAFBER.scss
@@ -38,7 +38,7 @@ $grey-dk-000: #959396 !default;
 $grey-dk-100: #5c5962 !default;
 $grey-dk-200: #44434d !default;
 $grey-dk-250: #302d36 !default;
-$grey-dk-300: #27262b !default;
+$grey-dk-300: #1f0685 !default;
 
 $grey-lt-000: #f5f6fa !default;
 $grey-lt-100: #eeebee !default;
@@ -71,14 +71,14 @@ $red-200: #e94c4c !default;
 $red-300: #dd2e2e !default;
 
 $body-background-color: $white !default;
-$sidebar-color: $blue-200 !default;
+$sidebar-color: $grey-lt-000 !default;
 $search-background-color: $white !default;
 $table-background-color: $white !default;
 $code-background-color: $grey-lt-000 !default;
 $feedback-color: darken($sidebar-color, 3%) !default;
 
 $body-text-color: $grey-dk-100 !default;
-$body-heading-color: $blue-300 !default;
+$body-heading-color: $grey-dk-300 !default;
 $search-result-preview-color: $grey-dk-000 !default;
 $nav-child-link-color: $grey-dk-100 !default;
 $link-color: $blue-300;
