--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -6,7 +6,7 @@
   z-index: 0;
   display: flex;
   flex-wrap: wrap;
-  background-color: $sidebar-color;
+  background-color: $white;
 
   @include mq(md) {
     flex-wrap: nowrap;
@@ -113,7 +113,7 @@
   @include container;
   flex-grow: 1;
   display: flex;
-  height: 100%;
+  height: 150%;
   align-items: center;
   padding-top: $sp-3;
   padding-bottom: $sp-3;
@@ -132,7 +132,7 @@
     height: 150%;
     background-image: url($logo);
     background-repeat: no-repeat;
-    background-position: left center;
+    background-position: center center;
     background-size: contain;
   }
 }
